在公司最后一次更新代码

--- a/RichTextEditor/index.html
+++ b/RichTextEditor/index.html
@@ -97,7 +97,7 @@
         <div id="text-input" contenteditable="true"></div>
     </div>
     <!--Script-->
-    <script src="script.js"></script>
+    <script type="text/javascript" src="weizhu.js"></script>
 </body>
 
 </html>
